Blackfire Player Changelog
==========================

* 0.9.0 (2018-xx-xx)

 * Add Blackfire PHP SDK User-Agent header suffix with Player version
 * Allow to set a build name

* 0.8.2 (2018-07-09)

 * Fix JSON error handling when reading stdin as input

* 0.8.1 (2018-07-06)

 * Improve error handling
 * Add more info to error output
 * Reword error messages
 * Update documentation
 * Update dependencies

* 0.8.0 (2018-06-25)

 * Add a validate command
 * Remove deprecated --json option
 * Deprecate run --validate option
 * Forward Blackfire player expectation failures to Blackfire API

* 0.7.0 (2018-06-14)

 * restrict loading to files with the 'bkf' extension
 * rework build references to have one reference per scenario
 * enable Blackfire by default when the '--blackfire-env' CLI option is used
 * fix usage of variables

* 0.6.0 (2018-04-17)

 * send Guzzle timers to Blackfire
 * improve exception messages
 * fix variables resolving
 * fix CLI parameters escaping

* 0.5.0-alpha-5 (2017-11-07)

 * add a 'warmup' step option
 * add a new CLI option '--full-report' and deprecate '--json'
 * add a cookie to profiled requests to help cross HTTP caches
 * add an extension to avoid infinite loops

* 0.5.0-alpha-1 (2017-01-05)

 * Second major release. It breaks backwards compatibility. For now on, the
   player is only distributed as a .phar file and cannot be embedded in a PHP
   project anymore.

* 0.4.6 (2016-12-05)

 * fix usage of parent build

* 0.4.5 (2016-06-21)

 * fix usage with headers defined in steps

* 0.4.4 (2016-06-21)

 * Fix typo in function name

* 0.4.3 (2016-06-20)

 * throw exceptions in case configuration is invalid

* 0.4.2 (2016-06-20)

 * made player exit with error when errors are logged

* 0.4.1 (2016-05-24)

 * fixed embedding scenarios bug

* 0.4.0 (2016-05-18)

 * updated deps
 * added log for extracted values
 * allowed endpoint to have a non-empty baseurl

* 0.3.0 (2016-01-27)

 * added reload support